# MRS_x500_blue

./: README.md
blue/: CMakeLists.txt  package.xml
blue/models/mrs_robots_description/meshes/: holybro_x500_grip.dae  holybro_x500_grip1.dae  holybro_x500_long_leg.dae
blue/models/mrs_robots_description/urdf/: blue.xacro  component_snippets.xacro
grip_controller/controller_g/config/: config.yaml
grip_controller/controller_g/include/: ControllerG.h
grip_controller/controller_g/launch/: ControllerG.launch
grip_controller/controller_g/src/: ControllerG.cpp
start/: .tmuxinator.yml  pos1.yaml
